<resources>
    <string name="app_name">sdulife</string>
    <string name="settings">Settings</string>
    <string name="check_internet_connection">Check internet connection</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="characters">Characters</string>
    <string name="character_size">Character list size is %d</string>
    <string name="detailed">Detailed Character</string>
    <string name="welcome">Welcome</string>
    <string name="log_in">Log in</string>
    <string name="et_hint_search">Search</string>
    <string name="load">Загрузка\n</string>
    <string name="id">ID</string>
    <string name="my_id">190103440</string>
    <string name="password">Password</string>
    <string name="account_recovery">Account recovery</string>
    <string name="e_mail">e-mail</string>
    <string name="email">olzhabek.adilbek@sdu.edu.kz</string>
    <string name="next">Next</string>
    <string name="create_a_password">Create a password</string>
    <string name="new_password">New password</string>
    <string name="development">Development</string>
    <string name="profile">Profile</string>
    <string name="university_clubs">University Clubs</string>
    <string name="vision_club"><font color="#450649">vision club</font></string>
    <string name="enjoy_the_beauty">Enjoy the beauty of italian cotton all over your body. This item will fit your body and warm you up all over and during spring. This item will fit your body and warm you up all over and during spring. \n \n \nAnd over and over again, this is the text.</string>
    <string name="search">Search</string>
    <string name="news">News</string>
    <string name="announcement">Announcement</string>
    <string name="name">Name</string>
    <string name="about">About</string>
    <string name="add_photo">Add photo</string>
    <string name="add_now">Add now</string>
    <string name="congrats">Congrats!</string>
    <string name="your_announcement_was_placed_successfully">Your announcement was placed successfully!</string>
    <string name="back_to_menu">Back to menu</string>
    <string name="date_news">24 March 2021</string>
    <string name="happy_children_s_day">Happy children\'s day</string>
    <string name="what_we_see">What we see is more impactful than what we listen to or hear. It is known to all and is now one of the most widespread applications in all fields. Right from education to the business, the visual approach to reach potential customers is increasing at a great pace. Visual design is the first thing that aims to improve the product’s usability and aesthetics of the site and application. A successful visual enhances the content and essence of the portal rather than overpowering it. Enhancing the user experience is one of the key functions of visual design. The MicroCreatives infographic depicted that around 61% of the marketers believe visuals are an integral part of any successful marketing campaign. Visuals are the key to an enhanced base of loyal customers, and using effective graphics can help the visitors follow the information seamlessly.</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="vision_club_toolbar">Vision club</string>
    <string name="ladies_club">Ladies club</string>
    <string name="head">Head:</string>
    <string name="zhamilya_sagatova">Zhamilya Sagatova</string>
    <string name="chat">Chat:</string>
    <string name="t_me_visionclubsdu">t.me/visionclubsdu</string>
    <string name="_438">438</string>
    <string name="posts">Posts</string>
    <string name="members">Members</string>
    <string name="_321k">321K</string>
    <string name="followers">Followers</string>
    <string name="join">Join</string>
    <string name="follow">Follow</string>
    <string name="hess_tournament_in_sdu_will_n_be_on_25_march_2021_participation_is">Сhess tournament in SDU will\n be on 25 March 2021. Participation is ...</string>
    <string name="_4h_ago">4h ago</string>
    <string name="follow_request">Follow Request</string>
    <string name="_1">1.</string>
    <string name="rayana_adilbek">Rayana Adilbek</string>
    <string name="_190103440">190103440</string>
    <string name="recommendation">Recommendation</string>
    <string name="recommended_for_you">Recommended for you</string>
    <string name="soul_condition">Soul Condition</string>
    <string name="recommended_videos">Recommended videos</string>
    <string name="aliso_canyon_leak_prompts_feds_to_n_recommend_dozens_of_safety_n_changes">Aliso Canyon leak prompts feds to\n recommend dozens of safety\n changes</string>
    <string name="_27_jan_2016">27 Jan 2016</string>
    <string name="we_start_every_morning_with_a_smile">We Start Every Morning with a Smile</string>
    <string name="far_far_away_behind_the_word_mountains_far_from_the_countries_vokalia_and_consonantia_there_live_the_blind_texts_separated_they_live_in_bookmarksgrove_right_at_the_coast_of_the_semantics_a_large_language_ocean">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</string>
    <string name="aldrin_s_photo_along_with_nearly_700_vintage_nasa_images_will_be_offered_for_sale_this_week_in_london_at_a_bloomsbury_auctions_event_entitled_from_the_earth_to_the_moon_the_collection_features_many_photos_never_released_by_nasa_including_a_series_of_mosaic_like_images_of_the_lunar_landscape_made_from_stitched_together_smaller_photos">Aldrin\'s photo, along with nearly 700 vintage NASA images, will be offered for sale this week in London at a Bloomsbury Auctions\' event entitled From the Earth to the Moon. The collection features many photos never released by NASA, including a series of mosaic-like images of the lunar landscape made from stitched-together smaller photos.</string>
    <string name="for_your_condition">For your condition</string>
    <string name="appointment">Appointment</string>
    <string name="men">Men</string>
    <string name="al_khalif_mukhtaruly">Al-KHALIF Mukhtaruly</string>
    <string name="phd">PhD</string>
    <string name="schedule_a_session">Schedule a session</string>
    <string name="list">List</string>
    <string name="saltanat_amangeldiyeva">Saltanat Amangeldiyeva</string>
    <string name="tuesday">Tuesday</string>
    <string name="_06_december">06 December</string>
    <string name="scheduled_to_play_tennis_with_vice_n_president_my_grandma">Scheduled to play tennis with Vice\n President my Grandma.</string>
    <string name="surname">Surname</string>
    <string name="_05">05</string>
    <string name="year">2023</string>
    <string name="hackathon">Hackathon</string>
    <string name="_10_01_2021">10.01.2021</string>
    <string name="_17_00_19_00">17:00 - 19:00</string>
    <string name="loading">Loading...</string>


</resources>