<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto">
        <TextView
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/TextViewHeader"
            android:background="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"
            android:text="@string/announcement"
            android:layout_height="wrap_content"
            app:drawableStartCompat="@drawable/ic_stroke" />
        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            android:inputType="textPersonName"
            android:layout_marginTop="@dimen/_26sdp"
            style="@style/EditTextMain"
            android:background="@drawable/shape_announcement"
            android:hint="@string/name"
            android:autofillHints="" />
        <EditText
            android:id="@+id/et_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/et_name"
            android:inputType="text"
            android:background="@drawable/shape_announcement"
            android:layout_marginTop="@dimen/_26sdp"
            style="@style/EditTextMain"
            android:hint="@string/about"
            android:autofillHints="" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/_28sdp"
            android:background="@drawable/shape_announcement"
            style="@style/EditTextMain"
            app:layout_constraintTop_toBottomOf="@id/et_about">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_40sdp"
                android:src="@drawable/ic_add_photo"
                android:contentDescription="@null" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_photo"
                android:layout_marginStart="@dimen/_55sdp"
                android:textSize="@dimen/_13ssp"
                android:layout_marginBottom="@dimen/_44sdp"
                android:layout_marginTop="@dimen/_10sdp"/>
        </LinearLayout>
        <Button
            android:id="@+id/btn_add_now"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_now"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>