<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/TextViewHeader"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:drawableStart="@drawable/ic_stroke"
        android:gravity="center"
        android:text="@string/create_a_password"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/iv_enter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:layout_marginTop="@dimen/_30sdp"
        android:text="You will need it to log in to the app"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/enter_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_40sdp"
        app:layout_constraintTop_toBottomOf="@id/iv_enter">

        <EditText
            android:id="@+id/id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/EditTextHeader"
            android:hint="@string/new_password"
            android:importantForAutofill="no"
            android:text="@string/password"
            android:drawableEnd="@drawable/ic_baseline_visibility"
            android:background="@null"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/button" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>