<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/TextViewHeader"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:text="@string/recommendation"
        android:layout_height="wrap_content"
        app:drawableStartCompat="@drawable/ic_stroke" />
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/_31sdp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_recommended"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_23sdp"
            android:text="@string/recommended_for_you"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_recommended"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            tools:listitem="@layout/item_recommendation_you"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <TextView
            android:id="@+id/tv_recommended_video"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/recommended_videos"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_recommendation_video"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/item_recommendation_video"
            tools:itemCount="5"
            android:layout_marginTop="@dimen/_20sdp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_31sdp"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/we_start_every_morning_with_a_smile"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/far_far_away_behind_the_word_mountains_far_from_the_countries_vokalia_and_consonantia_there_live_the_blind_texts_separated_they_live_in_bookmarksgrove_right_at_the_coast_of_the_semantics_a_large_language_ocean"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/aldrin_s_photo_along_with_nearly_700_vintage_nasa_images_will_be_offered_for_sale_this_week_in_london_at_a_bloomsbury_auctions_event_entitled_from_the_earth_to_the_moon_the_collection_features_many_photos_never_released_by_nasa_including_a_series_of_mosaic_like_images_of_the_lunar_landscape_made_from_stitched_together_smaller_photos"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
</layout>